--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@ ol {
 
 /* Write your CSS below, don't change the rules above. */
 
+img{
+  width: 200px;
+  height: 200px;
+}
 h1{
-  color: aqua;
+  color: green;
 }
 
 p{
